<resources>
    <string name="movie_title">Movie Title</string>
    <string name="app_name">Film</string>
    <string name="Description">Description</string>
    <string name="tab_title1">Movie</string>
    <string name="tab_title2">TV Show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_show_title">tv show Title</string>
    <string-array name="title">
        <item>A Star</item>
        <item>Aquaman</item>
        <item>Avenger Infinity</item>
        <item>Bird Box</item>
        <item>Bohemian</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>How to Train Your Dragon</item>
        <item>Dragon Ball</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
    </string-array>
    <string-array name="year">
        <item>2013</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2015</item>
        <item>2016</item>
        <item>2010</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
    </string-array>
    <string name="movie_year">movie year</string>
    <string name="overview">Overview</string>
    <string-array name="runtime">
        <item>2h 16m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 13m</item>
        <item>1h 48m</item>
        <item>1h 40m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
    </string-array>
    <string name="movie_runtime">movie runtime</string>
    <string name="dot">:</string>
    <string-array name="genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action,, Adventure</item>
        <item>Drama</item>
        <item>Action, Adventure, Comedy</item>
        <item>Fantasi, Adventure, Animation, Family</item>
        <item>Fantasi, Adventure, Animation</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Action, Thriller</item>
    </string-array>
    <string name="movie_genre">movie genre</string>
    <string name="change_leanguage_setting">Change Leanguage Setting</string>
    <string name="episodes">Episodes</string>
    <string name="tv_show_episodes">TV Show Episodes</string>
    <string-array name="title_tvshow">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shipudden</item>
        <item>Ncis</item>
    </string-array>
    <string-array name="runtime_tvshow">
        <item>42m</item>
        <item>60m</item>
        <item>-</item>
        <item>25m</item>
        <item>22m</item>
        <item>44m</item>
        <item>43m, 60m</item>
        <item>43m</item>
        <item>50m</item>
        <item>55m</item>
        <item>25m</item>
        <item>45m</item>
    </string-array>
    <string-array name="genre_tvshow">
        <item>Drama, Crime, Mystery</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Adventure, Action, Animation</item>
        <item>Adventure, Action, Animation, Fantasy</item>
        <item>Animation, Comedy</item>
        <item>Drama,  Science Fiction</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Drama</item>
        <item>Drama, Adventure, Action</item>
        <item>Action, Adventure</item>
        <item>Animation, Drama, Comedy</item>
        <item>Action, Adventure, Crime, Drama</item>
    </string-array>
    <string-array name="year_tvshow">
        <item>2012</item>
        <item>2019</item>
        <item>1989</item>
        <item>2009</item>
        <item>1999</item>
        <item>2014</item>
        <item>2014</item>
        <item>2009</item>
        <item>2019</item>
        <item>2017</item>
        <item>2007</item>
        <item>2003</item>
    </string-array>
    <string-array name="episode">
        <item>10 Episodes</item>
        <item>15 Episodes</item>
        <item>41 Episodes</item>
        <item>51 Episodes</item>
        <item>9 Episodes</item>
        <item>9 Episode</item>
        <item>12 Episodes</item>
        <item>9 Episodes</item>
        <item>8 Episodes</item>
        <item>10 Episodes</item>
        <item>87 Episodes</item>
        <item>11 Episodes</item>
    </string-array>
    <string-array name="description">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows Thanos. A despot of intergalactic infamy</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle scarred</item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed.</item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccups reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty four personalities. Meanwhile, the shadowy presence</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup detat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
    </string-array>
</resources>